infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: codewithac/event-bus
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: <Port>

---
apiVersion: v1
kind: Service
metadata: 
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
